--- a/ProyectoMancariBlue/Views/Empleado/_PartialViewGenerarPlanilla.cshtml
+++ b/ProyectoMancariBlue/Views/Empleado/_PartialViewGenerarPlanilla.cshtml
@@ -27,10 +27,10 @@
                 <tr>
                     <td> @Html.DisplayFor(modelItem => item.Patrono)</td>
                     <td>@FormatearColones(item.SalarioBruto.Value)</td>
-                    <td>@FormatearColones(item.SalarioBruto.Value)</td>
-                    <td>@FormatearColones(item.SalarioBruto.Value)</td>
-                    <td>@FormatearColones(item.SalarioBruto.Value)</td>
-                    <td>@FormatearColones(item.SalarioBruto.Value)</td>
+                    <td>@FormatearColones(item.CCSS.Value)</td>
+                    <td>@FormatearColones(item.LPT.Value)</td>
+                    <td>@FormatearColones(item.TotalDeducciones.Value)</td>
+                    <td>@FormatearColones(item.SalarioNeto.Value)</td>
                     <td>@item.FechaPago.Value.ToShortDateString()</td>
                 </tr>
               
