--- a/ProyectoMancariBlue/Views/Animal/IndexG.cshtml
+++ b/ProyectoMancariBlue/Views/Animal/IndexG.cshtml
@@ -19,11 +19,13 @@
     </ul>
 </div>
 <div class="row">
+
     <div class="col-md-12">
         <div class="tile">
             <div class="tile-body">
                 <div class="table-responsive">
                     <table class="table table-hover table-bordered" id="tanimales">
+                        <h4>Registro Generacional - Padres</h4>
                         <thead>
                             <tr>
                                 <th>
@@ -95,6 +97,7 @@
             <div class="tile-body">
                 <div class="table-responsive">
                     <table class="table table-hover table-bordered" id="tanimalesmMother">
+                        <h4>Registro Generacional - Madres</h4>
                         <thead>
                             <tr>
                                 <th>
